--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -9,3 +9,12 @@
     -webkit-user-select: auto;
   }
 }
+
+#forceTouchCapability {
+	height: 50vh;
+	width: 50vh;
+	font-size: 24px;
+	text-align: center;
+	color: red;
+	background-color: black;
+}
