first set of styling

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,16 +1,27 @@
-Welcome to ScaleIt
-<div id="forceTouchCapability">
-	Touch here
-</div>
-<div id="tapCount">
-</div>
-<div id="timestamp">
-</div>
-<div id="phase">
-</div>
-<div id="force">
-</div>
-<div id="maximumPossibleForce">
-</div>
-<div id="touchType">
+<div class="container">
+	<img src="img/scale.png">
+  <div class="row">
+  	<div id="forceTouchCapability">
+    	<span class="btn">
+    		ScaleUp 
+    		<div class="text-muted">
+    		(you may have to use a spoon or something as your tray)
+    		</div>
+    	</span>
+    </div>
+	</div>
+	<div id="tapCount">
+	</div>
+	<div id="timestamp">
+	</div>
+	<div id="phase">
+	</div>
+	<div id="maximumPossibleForce">
+	</div>
+	<div id="touchType">
+	</div>
+	<div id="force">
+	</div>
+	<div id="force2">
+	</div>
 </div>
