--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,3 +1,11 @@
+@font-face {
+  font-family: "Brandon Grotesque";
+  src: url("fonts/brandon_grotesque.otf") format('opentype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+
 * {
   -webkit-tap-highlight-color: rgba(0,0,0,0);
   -webkit-tap-highlight-color: transparent;
@@ -10,11 +18,124 @@
   }
 }
 
-#forceTouchCapability {
-	height: 50vh;
-	width: 50vh;
-	font-size: 24px;
-	text-align: center;
-	color: red;
-	background-color: black;
+
+/* Keep everything the same */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font: 30px "Brandon Grotesque";
+  height: 100vh;
+}
+
+/* So the background is not so plain */
+html {
+  height: 100%;
+  background: white;
+  background: radial-gradient(circle, #fff 20%, #F0EFF4);
+  background-size: cover;
+}
+
+.container {
+  height: 100%;
+  width: 100%;
+}
+
+.row {
+  display:block;
+  width:90%;
+  margin-right: auto;
+  margin-left: auto;
+  height:auto;
+}
+
+.btn {
+  float: left;
+  position: absolute;
+  cursor: pointer;
+  top: 150px;
+  border-radius: 5px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2);
+  line-height: 50vh;
+  width: 90vw;
+  height: 52vh;
+  text-align: center;
+
+  background: #FF4962;
+  box-shadow: 0px 5px 10px #D80032;
+  color: #D80032;
+
+  /* so nobody selects the inside text on button */
+  user-select: none;
+
+  /* Smoothing out hover using css3 transitions, if not, the pressed button effect looks a bit hard */
+  transition: all 0.2s ease;
+
+    @media only screen and (min-device-width: 414px) and (max-device-width: 414px) and (orientation:portrait) {
+    /* iPhone 6 Plus*/
+      top: 175px;
+    }
+
+    .text-muted {
+      width: 80%;
+      font-size: 20px;
+      margin-left: auto;
+      margin-right: auto;
+      margin-top: -125px;
+    }
+}
+
+/*==========  Different button styles  ==========*/
+.btn:hover {
+  background: #FF4962;
+  box-shadow: 0px 7px 4px #D80032;
+  color: #D80032;
+}
+/* Imitate a pressed effect for buttons */
+.btn:active {
+  box-shadow: 0px 0px #D80032;
+  top: 154px;
+
+    @media only screen and (min-device-width: 414px) and (max-device-width: 414px) and (orientation:portrait) {
+    /* iPhone 6 Plus*/
+      top: 179px;
+    }
+}
+
+#force {
+  position: absolute;
+  display: inline-block;
+  bottom: 0em;
+  left: 0em;
+  height: 12vh;
+  width: 50vw;
+  background-color: #66D7D1;
+  // border: 1px solid #FF4962;
+  text-align: center;
+  font-size: 20px;
+  color: #FF4962;
+  padding: 12px;
+}
+
+#force2 {
+  position: absolute;
+  display: inline-block;
+  bottom: 0em;
+  right: 0em;
+  height: 12vh;
+  width: 50vw;
+  background-color: #8980F5;
+  // border: 1px solid #FF4962;
+  text-align: center;
+  font-size: 20px;
+  color: #FF4962;
+  padding: 12px;
+}
+
+img {
+  display: block;
+  height: 125px;
+  top: 1em;
+  margin-right: auto;
+  margin-left: auto;
 }
