--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -112,9 +112,9 @@ html {
   background-color: #66D7D1;
   // border: 1px solid #FF4962;
   text-align: center;
-  font-size: 20px;
-  color: #FF4962;
-  padding: 12px;
+  font-size: 25px;
+  color: #ffffff;
+  padding: 25px;
 }
 
 #force2 {
@@ -138,4 +138,8 @@ img {
   top: 1em;
   margin-right: auto;
   margin-left: auto;
+}
+
+#forceTouchCapability {
+  display: none;
 }
