--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -3,7 +3,7 @@
   <div class="row">
   	<div id="forceTouchCapability">
     	<span class="btn">
-    		ScaleUp 
+    		SCALE<span class="big">UP</span>
     		<div class="text-muted">
     		(you may have to use a spoon or something as your tray)
     		</div>
@@ -21,7 +21,9 @@
 	<div id="touchType">
 	</div>
 	<div id="force">
+		G
 	</div>
 	<div id="force2">
+		RESET
 	</div>
 </div>
