--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -22,9 +22,11 @@
 	</div>
 	<div id="touchType">
 	</div>
-	<div id="force">
+	<div id="force-container">
+		<div id="force"></div>
 		G
 	</div>
-	<div id="force2" {{action 'reset'}}>
+	<div id="reset-container" {{action 'reset'}}>
+		RESET
 	</div>
 </div>
